# retailsense_ai

./: .env.example  .gitignore  BIGQUERY_USAGE.md  BLOG_POST.md  KAGGLE_WRITEUP.md  LICENSE  PRODUCTION_SETUP.md  QUICKSTART.md  README.md  SUBMISSION_PACKAGE.md  USER_SURVEY.txt  production_demo.py  pyproject.toml  run_bigquery_scripts.ps1  setup.py  setup_production.py  test_gcloud.py  test_production.py
notebooks/: 01_setup_and_overview.ipynb  02_data_generation_and_eda.ipynb  03_ai_similarity_search.ipynb  04_business_intelligence.ipynb  05_bigquery_integration.ipynb  retailsense_ai_complete_demo.ipynb
sql/: 01_setup_dataset.sql  02_load_ga4_data.sql  03_create_product_analytics.sql  04_create_ml_models.sql  05_ml_predictions.sql  06_executive_dashboard.sql  run_all.sql
src/retailsense_ai/: __init__.py  core.py  demo.py  main.py  online_demo.py
tests/: __init__.py  test_demo.py
