[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "retailsense-ai"
version = "0.1.0"
description = "RetailSense AI - Multimodal E-commerce Intelligence Engine using BigQuery AI"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "RetailSense AI Team", email = "team@retailsense.ai"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Point-Of-Sale",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "google-cloud-bigquery>=3.11.0",
    "google-cloud-storage>=2.10.0",
    "google-auth>=2.20.0",
    "db-dtypes>=1.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "ipywidgets>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/retailsense-ai"
Repository = "https://github.com/yourusername/retailsense-ai.git"
Issues = "https://github.com/yourusername/retailsense-ai/issues"

[project.scripts]
retailsense-demo = "retailsense_ai.main:main"
retailsense-ai = "retailsense_ai.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/retailsense_ai"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
